mobile screen adjusted

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <a href="#"><i class="far fa-envelope"></i></a>
           <p>Hello@colorlib.com</p>
         </div>
-        <div>
+        <div class="shipping">
           <p>Free Shipping for all order of $99</p>
         </div>
         <div class="top-icons">
@@ -46,7 +46,7 @@
                 <select name="" id="location">
                   <option value="Gurugram">Gurugram</option>
                   <option value="Mumbai">Mumbai</option>
-                  <option value="Delhi">Delhi</option>
+                  <option value="Delhi">Dehli</option>
                   <option value="Bangalore">Bangalore</option>
                 </select>
               </div>
@@ -71,7 +71,7 @@
               >
             </div>
             <div class="profile">
-              <form action="">
+              <form action="" class="profile-form">
                 <label for="profile"><i class="far fa-user"></i></label>
                 <select name="" id="profile">
                   <option value="john-doe">john doe</option>
@@ -137,7 +137,7 @@
       <!--end of single card-->
 
       <!--single card-->
-      <div class="single-card middle-card">
+      <div class="single-card middle-card mobile-card">
         <img src="./images/hero-card-3.png" alt="image" />
         <div class="discount-card">
           <h2>6% off</h2>
@@ -178,12 +178,11 @@
           <h2>shop by</h2>
           <h1>categories</h1>
         </div>
-        <div class="c-cards">
+        <div class="c-cards right-left-btn">
           <!--single card-->
-          <span class="first-card">
+          <span>
             <img src="./images/categories/cat-1.png" alt="" />
             <a href="#">Vegetables & Fruits</a>
-            <button><i class="fas fa-chevron-right"></i></button>
           </span>
           <!--end of single card-->
           <!--single card-->
@@ -214,9 +213,12 @@
           <span class="last-card">
             <img src="./images/categories/cat-6.png" alt="" />
             <a href="#">Home Care</a>
-            <button><i class="fas fa-chevron-right"></i></button>
           </span>
           <!--end of single card-->
+          <button class="left-btn"><i class="fas fa-chevron-right"></i></button>
+          <button class="right-btn">
+            <i class="fas fa-chevron-right"></i>
+          </button>
         </div>
       </section>
     </section>
@@ -225,7 +227,7 @@
         <h2>for you</h2>
         <h1>top featured products</h1>
       </div>
-      <div class="top-product-cards">
+      <div class="top-product-cards right-left-btn">
         <!--single card-->
         <div class="card first-card">
           <div class="card-top">
@@ -250,7 +252,6 @@
               <a href="#"><i class="fas fa-shopping-cart"></i></a>
             </div>
           </div>
-          <button><i class="fas fa-chevron-right"></i></button>
         </div>
         <!--end of single card-->
         <!--single card-->
@@ -355,9 +356,12 @@
               <a href="#"><i class="fas fa-shopping-cart"></i></a>
             </div>
           </div>
-          <button><i class="fas fa-chevron-right"></i></button>
         </div>
         <!--end of single card-->
+        <button class="left-btn"><i class="fas fa-chevron-right"></i></button>
+        <button class="right-btn">
+          <i class="fas fa-chevron-right"></i>
+        </button>
       </div>
     </section>
     <section class="values center">
@@ -407,7 +411,7 @@
         <h2>for you</h2>
         <h1>top vegetables & fruits products</h1>
       </div>
-      <div class="top-product-cards">
+      <div class="top-product-cards right-left-btn">
         <!--single card-->
         <div class="card first-card">
           <div class="card-top">
@@ -432,7 +436,6 @@
               <a href="#"><i class="fas fa-shopping-cart"></i></a>
             </div>
           </div>
-          <button><i class="fas fa-chevron-right"></i></button>
         </div>
         <!--end of single card-->
         <!--single card-->
@@ -537,9 +540,12 @@
               <a href="#"><i class="fas fa-shopping-cart"></i></a>
             </div>
           </div>
-          <button><i class="fas fa-chevron-right"></i></button>
         </div>
         <!--end of single card-->
+        <button class="left-btn"><i class="fas fa-chevron-right"></i></button>
+        <button class="right-btn">
+          <i class="fas fa-chevron-right"></i>
+        </button>
       </div>
     </section>
     <section class="new-products center">
@@ -547,7 +553,7 @@
         <h2>for you</h2>
         <h1>added new products</h1>
       </div>
-      <div class="top-product-cards">
+      <div class="top-product-cards right-left-btn">
         <!--single card-->
         <div class="card first-card">
           <div class="card-top">
@@ -572,7 +578,6 @@
               <a href="#"><i class="fas fa-shopping-cart"></i></a>
             </div>
           </div>
-          <button><i class="fas fa-chevron-right"></i></button>
         </div>
         <!--end of single card-->
         <!--single card-->
@@ -677,9 +682,12 @@
               <a href="#"><i class="fas fa-shopping-cart"></i></a>
             </div>
           </div>
-          <button><i class="fas fa-chevron-right"></i></button>
         </div>
         <!--end of single card-->
+        <button class="left-btn"><i class="fas fa-chevron-right"></i></button>
+        <button class="right-btn">
+          <i class="fas fa-chevron-right"></i>
+        </button>
       </div>
     </section>
     <footer class="footer">
