hover effect added to buttons

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </div>
 
           <div class="nav-right">
-            <form action="">
+            <form action="" class="btn">
               <label for="cart"><i class="fas fa-shopping-cart"></i></label>
               <select name="cart number" id="cart">
                 <option value="cart 2">cart 2</option>
@@ -120,7 +120,7 @@
           <h1>buy more & save more</h1>
           <p>beverage</p>
         </div>
-        <a href="#" class="shop-btn">Shop now</a>
+        <a href="#" class="shop-btn btn">Shop now</a>
       </div>
       <!--end of single card-->
 
@@ -132,7 +132,7 @@
           <h1>buy more & save more</h1>
           <p>nuts & snacks</p>
         </div>
-        <a href="#" class="shop-btn">Shop now</a>
+        <a href="#" class="shop-btn btn">Shop now</a>
       </div>
       <!--end of single card-->
 
@@ -144,7 +144,7 @@
           <h1>buy more & save more</h1>
           <p>fresh vegetables</p>
         </div>
-        <a href="#" class="shop-btn">Shop now</a>
+        <a href="#" class="shop-btn btn">Shop now</a>
       </div>
       <!--end of single card-->
 
@@ -156,7 +156,7 @@
           <h1>buy more & save more</h1>
           <p>fresh fruit</p>
         </div>
-        <a href="#" class="shop-btn">Shop now</a>
+        <a href="#" class="shop-btn btn">Shop now</a>
       </div>
       <!--end of single card-->
 
@@ -168,7 +168,7 @@
           <h1>buy more & save more</h1>
           <p>eggs & diary</p>
         </div>
-        <a href="#" class="shop-btn">Shop now</a>
+        <a href="#" class="shop-btn btn">Shop now</a>
       </div>
       <!--end of single card-->
     </section>
@@ -180,42 +180,42 @@
         </div>
         <div class="c-cards right-left-btn">
           <!--single card-->
-          <span>
+          <a href="#" class="category-card">
             <img src="./images/categories/cat-1.png" alt="" />
-            <a href="#">Vegetables & Fruits</a>
-          </span>
+            <h1>Vegetables & Fruits</h1>
+          </a>
           <!--end of single card-->
           <!--single card-->
-          <span>
+          <a href="#" class="category-card">
             <img src="./images/categories/cat-2.png" alt="" />
-            <a href="#">Grocery & Staples</a>
-          </span>
+            <h1>Grocery & Staples</h1>
+          </a>
           <!--end of single card-->
           <!--single card-->
-          <span>
+          <a href="#" class="category-card">
             <img src="./images/categories/cat-3.png" alt="" />
-            <a href="#">Dairy & Eggs</a>
-          </span>
+            <h1>Dairy & Eggs</h1>
+          </a>
           <!--end of single card-->
           <!--single card-->
-          <span>
+          <a href="#" class="category-card">
             <img src="./images/categories/cat-4.png" alt="" />
-            <a href="#">Beverages</a>
-          </span>
+            <h1>Beverages</h1>
+          </a>
           <!--end of single card-->
           <!--single card-->
-          <span>
+          <a href="#" class="category-card">
             <img src="./images/categories/cat-5.png" alt="" />
-            <a href="#">Snacks</a>
-          </span>
+            <h1>Snacks</h1>
+          </a>
           <!--end of single card-->
           <!--single card-->
-          <span class="last-card">
+          <a href="#" class="category-card">
             <img src="./images/categories/cat-6.png" alt="" />
-            <a href="#">Home Care</a>
-          </span>
+            <h1>Home Care</h1>
+          </a>
           <!--end of single card-->
-          <button class="left-btn"><i class="fas fa-chevron-right"></i></button>
+          <button class="left-btn"><i class="fas fa-chevron-left"></i></button>
           <button class="right-btn">
             <i class="fas fa-chevron-right"></i>
           </button>
@@ -358,7 +358,7 @@
           </div>
         </div>
         <!--end of single card-->
-        <button class="left-btn"><i class="fas fa-chevron-right"></i></button>
+        <button class="left-btn"><i class="fas fa-chevron-left"></i></button>
         <button class="right-btn">
           <i class="fas fa-chevron-right"></i>
         </button>
@@ -404,7 +404,7 @@
     </section>
     <section class="cashback center">
       <h1>Get $5 Cashback! Min Order of $50</h1>
-      <a href="#">USE CODE : COMBOSUPERR2a</a>
+      <a href="#" class="cashback-btn">USE CODE : COMBOSUPERR2a</a>
     </section>
     <section class="top-vegetables center">
       <div class="section-title">
@@ -542,7 +542,7 @@
           </div>
         </div>
         <!--end of single card-->
-        <button class="left-btn"><i class="fas fa-chevron-right"></i></button>
+        <button class="left-btn"><i class="fas fa-chevron-left"></i></button>
         <button class="right-btn">
           <i class="fas fa-chevron-right"></i>
         </button>
@@ -684,7 +684,7 @@
           </div>
         </div>
         <!--end of single card-->
-        <button class="left-btn"><i class="fas fa-chevron-right"></i></button>
+        <button class="left-btn"><i class="fas fa-chevron-left"></i></button>
         <button class="right-btn">
           <i class="fas fa-chevron-right"></i>
         </button>
@@ -735,7 +735,7 @@
                 name="email"
                 id="email"
               />
-              <button type="submit">subscribe</button>
+              <button type="submit" class="btn">subscribe</button>
             </div>
           </form>
           <div class="payment">
