top section corrected

--- a/index.html
+++ b/index.html
@@ -20,18 +20,20 @@
   <body>
     <div class="header">
       <section class="top">
-        <div class="top-mail">
-          <a href="#"><i class="far fa-envelope"></i></a>
-          <p>Hello@colorlib.com</p>
-        </div>
-        <div class="shipping">
-          <p>Free Shipping for all order of $99</p>
-        </div>
-        <div class="top-icons">
-          <a href="#"><i class="fab fa-facebook-square"></i></a>
-          <a href="#"><i class="fab fa-whatsapp"></i></a>
-          <a href="#"><i class="fab fa-linkedin"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
+        <div class="center">
+          <div class="top-mail">
+            <a href="#"><i class="far fa-envelope"></i></a>
+            <p>Hello@colorlib.com</p>
+          </div>
+          <div class="shipping">
+            <p>Free Shipping for all order of $99</p>
+          </div>
+          <div class="top-icons">
+            <a href="#"><i class="fab fa-facebook-square"></i></a>
+            <a href="#"><i class="fab fa-whatsapp"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+          </div>
         </div>
       </section>
       <section class="logo">
